Bug 45376 - [4.6 Regression] no such instruction: `pcmpestri $0,(%rdi),%xmm0'
Summary: [4.6 Regression] no such instruction: `pcmpestri $0,(%rdi),%xmm0'
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Henderson
URL: http://gcc.gnu.org/ml/gcc-patches/201...
Keywords: build, patch
Depends on:
Blocks:
 
Reported: 2010-08-22 10:11 UTC by Mikael Morin
Modified: 2010-08-24 21:11 UTC (History)
2 users (show)

See Also:
Host: x86_64-unknown-freebsd8.0
Target: x86_64-unknown-freebsd8.0
Build: x86_64-unknown-freebsd8.0
Known to work:
Known to fail:
Last reconfirmed: 2010-08-24 21:06:41


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikael Morin 2010-08-22 10:11:29 UTC
Updating today at revision 163455 gave : 
/home/mik/gcc46/src/libcpp/lex.c: Assembler messages:
/home/mik/gcc46/src/libcpp/lex.c:448: Error: no such instruction: `pcmpestri $0,(%rdi),%xmm0'
/home/mik/gcc46/src/libcpp/lex.c:432: Error: no such instruction: `pcmpestri $0,(%rdi),%xmm0'

A revision from yesterday worked (2010-08-21), but I don't remember the revision number. 
Possible culprit according to the ChangeLog : revision 163446.
Comment 1 Mikael Morin 2010-08-22 10:33:55 UTC
(In reply to comment #0)
> Possible culprit according to the ChangeLog : revision 163446.
> 
confirmed: r163446 _is_ the culprit. 

The stage1 libcpp builds fine. The failure is at stage2. 

Configure line: 
  $ /home/mik/gcc46/src/configure --prefix=/home/mik/gcc46 --enable-maintainer-mode --disable-multilib --enable-languages=fortran
Comment 2 Mikael Morin 2010-08-22 10:49:33 UTC
This might be of interest: the machine I'm running on as reported by the kernel.

CPU: AMD Athlon(tm) 64 Processor 3000+ (2009.79-MHz K8-class CPU)
  Origin = "AuthenticAMD"  Id = 0xfc0  Stepping = 0
  Features=0x78bfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR,PGE,MCA,CMOV,PAT,PSE36,CLFLUSH,MMX,FXSR,SSE,SSE2>
  AMD Features=0xe0500800<SYSCALL,NX,MMX+,LM,3DNow!+,3DNow!>
Comment 3 pinskia@gmail.com 2010-08-22 18:05:20 UTC
Subject: Re:   New: no such instruction: `pcmpestri $0,(%rdi),%xmm0'

What version of binutils is being used?
Have you tried a newer version?

On Aug 22, 2010, at 3:11 AM, "mikael at gcc dot gnu dot org" <gcc-bugzilla@gcc.gnu.org 
 > wrote:

> Updating today at revision 163455 gave :
> /home/mik/gcc46/src/libcpp/lex.c: Assembler messages:
> /home/mik/gcc46/src/libcpp/lex.c:448: Error: no such instruction:  
> `pcmpestri
> $0,(%rdi),%xmm0'
> /home/mik/gcc46/src/libcpp/lex.c:432: Error: no such instruction:  
> `pcmpestri
> $0,(%rdi),%xmm0'
>
> A revision from yesterday worked (2010-08-21), but I don't remember  
> the
> revision number.
> Possible culprit according to the ChangeLog : revision 163446.
>
>
> -- 
>           Summary: no such instruction: `pcmpestri $0,(%rdi),%xmm0'
>           Product: gcc
>           Version: 4.6.0
>            Status: UNCONFIRMED
>          Severity: normal
>          Priority: P3
>         Component: bootstrap
>        AssignedTo: unassigned at gcc dot gnu dot org
>        ReportedBy: mikael at gcc dot gnu dot org
> GCC build triplet: x86_64-unknown-freebsd8.0
>  GCC host triplet: x86_64-unknown-freebsd8.0
> GCC target triplet: x86_64-unknown-freebsd8.0
>
>
> http://gcc.gnu.org/bugzilla/show_bug.cgi?id=45376
>
Comment 4 Andrew Pinski 2010-08-23 21:42:25 UTC
Confirmed.
Comment 5 Mikael Morin 2010-08-24 10:43:59 UTC
(In reply to comment #3)
> Subject: Re:   New: no such instruction: `pcmpestri $0,(%rdi),%xmm0'
> 
> What version of binutils is being used?
> Have you tried a newer version?
> 

% as --version
GNU assembler 2.15 [FreeBSD] 2004-05-23
Copyright 2002 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License.  This program has absolutely no warranty.
This assembler was configured for a target of `x86_64-obrien-freebsd'.

I haven't tried any newer version. 
Comment 6 Andrew Pinski 2010-08-24 19:12:54 UTC
Note a patch was posted at http://gcc.gnu.org/ml/gcc-patches/2010-08/msg01753.html.
Comment 7 Richard Henderson 2010-08-24 21:08:22 UTC
Subject: Bug 45376

Author: rth
Date: Tue Aug 24 21:08:05 2010
New Revision: 163528

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=163528
Log:
        PR bootstrap/45376
        * configure.ac (HAVE_SSE4): New check.
        * configure, config.in: Rebuild.
        * lex.c (search_line_sse42): Omit if !HAVE_SSE4.

Modified:
    trunk/libcpp/ChangeLog
    trunk/libcpp/config.in
    trunk/libcpp/configure
    trunk/libcpp/configure.ac
    trunk/libcpp/lex.c

Comment 8 Richard Henderson 2010-08-24 21:08:46 UTC
Fixed.