re PR bootstrap/45376 (no such instruction: `pcmpestri $0,(%rdi),%xmm0')

PR bootstrap/45376
        * configure.ac (HAVE_SSE4): New check.
        * configure, config.in: Rebuild.
        * lex.c (search_line_sse42): Omit if !HAVE_SSE4.

From-SVN: r163528